--- a/frontend/src/styles/volunteerRegister.module.css
+++ b/frontend/src/styles/volunteerRegister.module.css
@@ -1,29 +1,28 @@
 .form_volunteer{
-    width: 70%;
+    width: 100%;
     box-sizing: border-box;
-    border: 1px solid black;
-    margin: auto;
     margin-top: 40px;
 }
 .form_volunteer>div{
     display: flex;
-    width: 60%;
+    width: 35%;
     margin: auto;
     margin-bottom: 10px;
     margin-top: 5px;
 }
-.form_volunteer>div>p{
-    width: 20%;
-    padding-right: 3px;
-    text-align: end;
-}
+
 .form_volunteer>div>input{
-    width: 50%;
+    width: 100%;
     padding: 4px;
     height: 20px;
+    margin: auto;
+}
+.form_volunteer>div>span{
+    color: red;
+    margin-top: -4px;
 }
 .set_register_btn{
-    padding: 8px;
+    padding: 4px 8px;
     background-color: white;  
     transition:ease-out;
     transition-duration: 1s;
@@ -33,4 +32,31 @@
     background-color:#0ec0e2 ;
     transition: ease-in-out;
     transition-duration: 200ms;
+}
+.add_btn_set{
+    padding: 5px;
+    border: none;
+    background-color: #0ec0e2;
+    color: white;
+    margin-left: 5px;
+    border-radius: 5px;
+}
+.set_added_data{
+    display: flex;
+    /* width: 10%; */
+    height: 20px;
+    margin-left: 5px;
+    font-size: 13px;
+    text-transform: uppercase;
+    padding: 6px;
+    border: none;
+    background-color: #0ec0e2;
+    color: white;
+    margin-left: 5px;
+    border-radius: 7px;
+    text-align: center;
+}
+.set_added_data>span{
+    margin-left: 6px;
+    cursor: pointer;
 }
